fix menu overflow

--- a/css/menubar.css
+++ b/css/menubar.css
@@ -1,6 +1,6 @@
 #menubar {
 	position: relative;
-	height: 100%; 
+	height: calc(100% - 20%);
 	width: 10%;
 	float: left;
 	background-color: green;
